--- a/KarynPHD/ClientApp/package.json
+++ b/KarynPHD/ClientApp/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "bootstrap": "^4.1.3",
+    "canihazusername": "^2.1.1",
     "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
     "merge": "^1.2.1",
