--- a/KarynPHD/ClientApp/package.json
+++ b/KarynPHD/ClientApp/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "bootstrap": "^4.1.3",
+    "can": "^6.6.1",
     "canihazusername": "^2.1.1",
+    "chakra-ui-steps": "^1.3.0",
     "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
     "merge": "^1.2.1",
@@ -15,6 +18,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.0.0",
     "react-google-recaptcha": "^2.1.0",
+    "react-icons": "^4.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
