--- a/KarynPHD/ClientApp/package.json
+++ b/KarynPHD/ClientApp/package.json
@@ -15,15 +15,19 @@
     "jquery": "^3.6.0",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
+    "radium": "^0.26.1",
     "react": "^16.14.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.0.0",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-toastify": "^8.0.2",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2",
+    "styled-components": "^5.3.1",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
