--- a/KarynPHD/ClientApp/package.json
+++ b/KarynPHD/ClientApp/package.json
@@ -28,6 +28,7 @@
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2",
     "styled-components": "^5.3.1",
+    "sweetalert2": "^11.1.8",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
