--- a/KarynPHD/KarynPHD.csproj
+++ b/KarynPHD/KarynPHD.csproj
@@ -7,10 +7,13 @@
     <IsPackable>false</IsPackable>
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
+    <UserSecretsId>269e7eca-8036-4f7a-9c65-0866fb7e2e23</UserSecretsId>
+    <ApplicationInsightsResourceId>/subscriptions/855e1073-31d5-41ff-a779-637d9bb263e0/resourceGroups/MobilitAzzjoniRG/providers/microsoft.insights/components/MobilitAzzjoniDev</ApplicationInsightsResourceId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Data.Tables" Version="12.2.0-beta.1" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.17" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.20.1" />
   </ItemGroup>
